sign up form styled

--- a/main.css
+++ b/main.css
@@ -10,7 +10,6 @@ body {
 .header {
     width: 100%;
     height: 35px;
-    position: fixed;
     top: 0;
     padding: 16px 0;
     background-color: #24292e;
@@ -118,9 +117,9 @@ body {
 }
 
 .jumbotron {
-    margin-top: 67px;
+    /* margin-top: 67px; */
     padding-top: 64px!important;
-    height: 556px;
+    height: 798px;
     background: url(https://2600index.info/Links/35/2/assets-cdn.github.com/images/modules/site/heroes/simple-codelines.svg) center/cover no-repeat border-box, #2b3137;
     color: hsla(0,0%,100%,.6);
 }
@@ -128,37 +127,34 @@ body {
 .container {
     min-height: 476px;
     max-height:  670px;
-    min-width: 767px;
+    /* min-width: 767px; */
     padding: 0 40px;
-    /* display: flex; */
-    /* justify-content: space-between; */
-    /* flex-flow: row wrap; */
 }
 
 .info {
     height: auto;
-    width: 50%;
+    width: 100%;
     padding-right: 24px;
     vertical-align: middle;
     margin: 0;
-    
-    /* align-content: center; */
-    /* align-items: center; */
 }
 
 .info h1 {
-    font-size: 64px;
+    font-size: 48px;
     color: #fff;
     margin: 0;
     margin-bottom: 16px;
     font-weight: 300;
+    text-align: center;
 }
 
 .info p {
     font-size: 22px;
     font-weight: 300;
     line-height: 32px;
-    text-align: justify;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 24px;
 }
 
 .hightlight {
@@ -170,21 +166,73 @@ body {
 }
 
 .formContainer {
-    width: 40%;
-    height: 100%;
-    padding-left: 24px;
+    width: 60%;
+    height: 410px;
     background-color: #fafbfc;
     color: #586069;
     border: none;
+    padding: 24px;
+    margin-left: auto;
+    margin-right: auto;
+    align-self: center;
+    border-radius: 3px;
+    line-height: 1.5rem;
 }
 
-@madia (min-width 500px) {
-    .jumbotron {
-        height: 749px;
+.formContainer input {
+    /* color: #d1d5da; */
+    border: 1px solid #d1d5da;
+    background-color: #fafbfc;
+    display: block;
+    width: calc(100% - 20px);
+    height: 26px;
+    text-align: left;
+    font-weight: 300;
+    padding: 10px;
+    margin: 0;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+label {
+    font-size: 14px;
+}
+
+.formContainer p {
+    font-size: 13px;
+    line-height: 1rem;
+    font-weight: 300px;
+}
+
+#username,
+#email {
+    margin-bottom: 15px;
+}
+
+.formContainer p > a {
+    color: #0366d6;
+}
+
+.button {
+    display: block;
+    background-color: #2ebc4f;
+    padding: 20px 32px;
+    width: 100%;
+    font-size: 16px;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+}
+
+@media (min-width: 767px) {
+    .info h1 {
+        font-size: 64px;
     }
-}
 
-@media (min-width: 1012px) {
+    .info p {
+        text-align: justify;
+    }
+
     .header {
         height: 56px;
     }
@@ -202,4 +250,8 @@ body {
         margin-left: auto;
         margin-right: auto;
     }
+}
+
+@media (max-width: 1012px) {
+    
 }
