--- a/main.css
+++ b/main.css
@@ -8,6 +8,10 @@ body {
 
 }
 
+button:hover {
+    cursor: pointer;
+}
+
 .header {
     width: 100%;
     height: 35px;
@@ -154,11 +158,15 @@ body {
 }
 
 .hightlight {
+    cursor: pointer;
+    text-decoration: none;
     color: #fff;
+    border-bottom: 1px solid #ffffff20;
 }
 
 .hightlight:hover {
     font-style: underline;
+    border-bottom-color: #fff;
 }
 
 .formContainer {
@@ -277,11 +285,24 @@ label {
     color: #fff;
 }
 
+.contactSales:hover {
+    background-color: #0366d6;
+}
+
 .startTrial {
     background-color: hsla(0,0%,100%,0)!important;
-    border: 1px solid #1277eb;
+    /* border: 1px solid #1277eb; */
+    box-shadow: inset 0 0 0 1px rgba(18,119,235,.5);
     color: #1277eb;
 }
+
+.startTrial:hover {
+    box-shadow: inset 0 0 0 1px #1277eb;
+    color: #0366d6;
+    text-decoration: none;
+}
+
+
 
 @media (min-width: 767px) {
     
