--- a/main.css
+++ b/main.css
@@ -268,7 +268,7 @@ label {
 
 .contactSales,
 .startTrial {
-    width: 351px;
+    width: 100%;
     height: 51px;
     text-align: center;
     padding: 16px 24px;
@@ -291,7 +291,6 @@ label {
 
 .startTrial {
     background-color: hsla(0,0%,100%,0)!important;
-    /* border: 1px solid #1277eb; */
     box-shadow: inset 0 0 0 1px rgba(18,119,235,.5);
     color: #1277eb;
 }
@@ -302,7 +301,40 @@ label {
     text-decoration: none;
 }
 
+.businessesContainer {
+    height: 324px;
+    padding: 0 16px;
+}
 
+.businessInfo {
+    height: 100%;
+    padding: 48px 0;
+    color: #6a737d;
+    overflow-wrap: break-word;
+    text-align: center;
+} 
+
+.businessLogos {
+    display: flex;
+    flex-flow: wrap;
+    filter: grayscale(100%);
+    list-style: none;
+    margin: 0;
+    margin-top: 8px;
+    padding: 0;   
+    justify-content: center;
+}
+
+.businessLogos li {
+    height: 40px; 
+}
+
+.businessLogos img {
+    position: relative;
+    margin: 10px;
+    height: 20px;
+    padding: 0 8px;
+}
 
 @media (min-width: 767px) {
     
