--- a/main.css
+++ b/main.css
@@ -401,6 +401,51 @@ label {
     transform: translateX(3px);
 }
 
+.betterTeam {
+    padding: 0 16px;
+}
+
+.betterTeamContent {
+    padding-top: 40px;
+}
+
+.hubot {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: none;
+    width: 83.33333%;;
+}
+
+.summary a {
+    display: flex;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 300;
+    color: #24292e;
+    justify-content: space-between;
+    cursor: pointer;
+    margin: 24px 0;
+    line-height: 21px;
+    overflow-wrap: break-word;
+}
+
+.summary a h3 {
+    font-size: 18px;
+    font-weight: 300;
+}
+
+.link-bt {
+    color: #1277eb;
+    box-shadow: 0 1px 0 0 rgba(18,119,235,.5);
+    transition: 0.2s;
+}
+
+.link-bt:hover {
+    box-shadow: 0 1px 0 0 #1277eb;
+    color: #0366d6;
+}
+
 @media (min-width: 767px) {
     
     .info h1 {
