--- a/main.css
+++ b/main.css
@@ -337,7 +337,8 @@ label {
 }
 
 .forTeams,
-.sa {
+.sa,
+.integrations {
     padding: 48px 0; 
 }
 
@@ -350,29 +351,37 @@ label {
 }
 
 .forTeamsSignupContainer,
-.sa-container {
+.sa-container,
+.integrationsContainer {
     padding: 0 16px 40px 16px;
     text-align: center;
 }
 
 .forTeamsSignupContainer h1,
-.sa-container h1 {
+.sa-container h1,
+.integrationsContainer h1 {
     margin: 16px 0 8px 0;
-    font-size: 40px;
-    font-weight: 500;
+    font-size: 44px;
+    font-weight: 400;
     color: #24292e;
 }
 
 .forTeamsSignupContainer p,
-.sa-container p {
+.sa-container p,
+.integrationsContainer p {
     font-size: 21px;
     font-weight: 400;
     line-height: 31px;
     color: #586069;
 }
 
+/* .integrationsContainer p {
+    line-height: 31px;
+} */
+
 .joinGitHub,
-.for-business {
+.for-business,
+.integrations-img {
     background-color: hsla(0,0%,100%,0);
     color: #1277eb!important;
     height: 64px;
@@ -390,14 +399,11 @@ label {
 }
 
 .joinGitHub:hover,
-.for-business:hover {
+.for-business:hover,
+.integrations-img:hover {
     box-shadow: inset 0 0 0 1px #1277eb;
     color: #0366d6!important;
     text-decoration: none;
-}
-
-.for-business:hover .bump-link-symbol {
-    transform: translateX(3px);
 }
 
 .bump-link-symbol {
@@ -406,7 +412,10 @@ label {
     transition: .2s;
 }
 
-.joinGitHub:hover .bump-link-symbol {
+.joinGitHub:hover .bump-link-symbol,
+.float-right a:hover .bump-link-symbol,
+.for-business:hover .bump-link-symbol,
+.integrations-img .bump-link-symbol {
     transform: translateX(3px);
 }
 
@@ -525,11 +534,7 @@ label {
     transition: .2s;
 }
 
-.float-right a:hover .bump-link-symbol {
-    transform: translateX(3px);
-}
-
-@media (min-width: 767px) {
+@media (min-width: 544px) {
     
     .info h1 {
         font-size: 64px;
@@ -588,6 +593,6 @@ label {
     }
 }
 
-@media (max-width: 1012px) {
+@media (max-width: 767px) {
     
 }
