--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@ body {
     margin: 0;
     color: #24292e;
     background-color: #fff;
+    line-height: 1.5rem;
 }
 
 button:hover {
@@ -232,7 +233,8 @@ label {
     margin-right: auto;
 }
 
-.tryGitHubConteiner {
+.tryGitHubConteiner,
+.comunityStatsContainer {
     padding: 0 16px;
 }
 
@@ -660,6 +662,15 @@ article {
     overflow-wrap: break-word; 
 }
 
+.story:nth-child(odd) {
+    margin-bottom: -16px;
+}
+
+.story:nth-child(2n) {
+    margin-top: -16px;
+}
+
+
 .scrolling-wrapper {
     overflow-x: scroll;
     overflow-y: hidden;
@@ -674,13 +685,6 @@ article {
     margin: 0;
     background-color: initial;
     text-decoration: none;
-}
-
-.story-img-box:after {
-    content: "";
-    display: block;
-    padding-bottom: 100%;
-    transition: padding-bottom .3s;
 }
 
 .story-img {
@@ -720,6 +724,43 @@ article {
     transform: scale(1.025);
     text-decoration: none;
     outline-width: 0;
+}
+
+.comunityStatsContainer:first-child p {
+    margin-bottom: 10px;
+    font-size: 21px;
+    font-weight: 400;
+    color: #586069;
+    text-align: center;
+}
+
+.stats {
+    display: inline-block;
+    align-items: center;
+
+}
+
+.stats:first-child {
+    display: flex;
+    flex-direction: column;
+}
+
+.orange-circle {
+    height: 225px;
+    width: 225px;
+    border: none;
+    border-radius: 50%;
+    background-color: #fb8532;
+    transition: transform .3s;
+    /* text-align: center; */
+    padding: 24px;
+    margin: 40px auto 16px auto;
+    justify-content: center;
+    box-shadow: 0 10px 50px rgba(27,31,35,.07);
+}
+
+.block-white {
+
 }
 
 @media (min-width: 544px) {
