--- a/main.css
+++ b/main.css
@@ -7,7 +7,6 @@ body {
     margin: 0;
     color: #24292e;
     background-color: #fff;
-    line-height: 1.5rem;
 }
 
 button:hover {
@@ -726,6 +725,10 @@ article {
     outline-width: 0;
 }
 
+.comunityStats {
+    padding: 0 40px;
+}
+
 .comunityStatsContainer:first-child p {
     margin-bottom: 10px;
     font-size: 21px;
@@ -737,30 +740,83 @@ article {
 .stats {
     display: inline-block;
     align-items: center;
+}
+
+
+.stats a {
+    display: inline-block;
+    text-decoration: none;
+    box-sizing: border-box;
+    border: 1px solid transparent;
+}
+
+.stats a:hover {
+    outline-width: 0;
+    text-decoration: none;
+    transform: scale(1.05);
+}
+
+.stats-text:hover {
 
 }
 
-.stats:first-child {
-    display: flex;
-    flex-direction: column;
-}
 
 .orange-circle {
-    height: 225px;
-    width: 225px;
+    height: 163px;
+    width: 163px;
     border: none;
     border-radius: 50%;
     background-color: #fb8532;
     transition: transform .3s;
-    /* text-align: center; */
-    padding: 24px;
+    padding: 31px;
     margin: 40px auto 16px auto;
     justify-content: center;
     box-shadow: 0 10px 50px rgba(27,31,35,.07);
+    transition: box-shadow .3s,border-color .3s;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.orange-circle span,
+.block-white {
+    color: #fff;
 }
 
 .block-white {
+    font-size: 32px;
+}
 
+.stats-text {
+    display: flex;
+    padding: 24px;
+    border-radius: 3px;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid transparent;
+    /* transition: box-shadow .3s,border-color .3s; */
+}
+
+.stats-text:hover {
+    border-color: #d1d5da;
+    box-shadow: 0 1px 15px rgba(27,31,35,.15);
+}
+
+.stats-text p {
+    color: #24292e;
+    font-size: 14px!important;
+    line-height: 21px;
+    margin: 0!important;
+    width: 83.33333%;
+    text-align: left!important;
+}
+
+.text-orange-light {
+    color: #fb8532;
+}
+
+.octicon-triangle-right {
+    fill: #fb8532;
 }
 
 @media (min-width: 544px) {
